# snakeGame

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  README_8md.html  annotated.html  audiomanager_8cpp.html  audiomanager_8cpp__incl.map  audiomanager_8cpp__incl.md5  audiomanager_8h.html  audiomanager_8h__dep__incl.map  audiomanager_8h__dep__incl.md5  audiomanager_8h__incl.map  audiomanager_8h__incl.md5  audiomanager_8h_source.html  classAudioManager-members.html  classAudioManager.html  classAudioManager__coll__graph.map  classAudioManager__coll__graph.md5  classAudioManager__inherit__graph.map  classAudioManager__inherit__graph.md5  classFood-members.html  classFood.html  classFood__coll__graph.md5  classFood__inherit__graph.map  classGameManager-members.html  classGameManager.html  classGameManager__coll__graph.map  classGameManager__coll__graph.md5  classGameManager__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.map  classMainWindow__inherit__graph.md5  classSnake-members.html  classSnake.html  classSnakeTest-members.html  classSnakeTest.html  (+103 more)
forms/: mainwindow.ui
include/: audiomanager.h  constants.h  food.h  gamemanager.h  mainwindow.h  snake.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_4.js  enums_0.js  enums_1.js  (+38 more)
src/: audiomanager.cpp  gamemanager.cpp  mainwindow.cpp  snake.cpp
(+2 files in other folders)
